# cmake_automake_example

./: 1.sh  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.am  Makefile.am~  Makefile.in  cmake_install.cmake  config.status  configure  configure.in  configure.in~  configure.scan  main  main.c  main.c~  main2.c  make.sh  rm.sh
.kdev4/: test1.kdev4
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
module1/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cmake_install.cmake  module1.c  module1.c~  module1.h
module1/.deps/: module1.Po
